--- a/Test_examples/1. Test.md
+++ b/Test_examples/1. Test.md
@@ -1,1 +1,29 @@
 Pirmajā testā 
+
+![1 att](https://github.com/kostjakotovich/DatuStrukturas_webscraping/blob/main/Test_examples/Images/1.image.png)
+
+1. att. Ievades dati
+
+![2 att](https://github.com/kostjakotovich/DatuStrukturas_webscraping/blob/main/Test_examples/Images/2.image.png)
+
+2. att. Meklešanas rezultāti
+
+![3 att](https://github.com/kostjakotovich/DatuStrukturas_webscraping/blob/main/Test_examples/Images/3.image.png)
+
+3. att. Meklešanas rezultāti 2 lapa
+
+![4 att](https://github.com/kostjakotovich/DatuStrukturas_webscraping/blob/main/Test_examples/Images/4.image.png)
+
+4. att. Rezultatu sarakstu izvade
+
+![5 att](https://github.com/kostjakotovich/DatuStrukturas_webscraping/blob/main/Test_examples/Images/5.image.png)
+
+5. att. Rezultatu sarakstu izvade 2 lapa
+
+![6 att](https://github.com/kostjakotovich/DatuStrukturas_webscraping/blob/main/Test_examples/Images/6.image.png)
+
+6. att. Sarakstu sortēšana
+
+![7 att](https://github.com/kostjakotovich/DatuStrukturas_webscraping/blob/main/Test_examples/Images/7.image.png)
+
+7. att. Programmas beigšana
