Pievienota informacija 1. test.md faila

--- a/Test_examples/1. Test.md
+++ b/Test_examples/1. Test.md
@@ -1,8 +1,15 @@
-Pirmajā testā 
+Pirmajā testā tika ievadīti parametri (skat.1.att.):
+- Specializācija: web
+- Atrašanas vieta: Riga
+- Atslēgvārdos nekas nav ievadīts, lauks ir tukšs.
+
+- Pieredzes līmenis: Junior
 
 ![1 att](https://github.com/kostjakotovich/DatuStrukturas_webscraping/blob/main/Test_examples/Images/1.image.png)
 
 1. att. Ievades dati
+
+Pēc tam, kad ir parādījusies izvēlne ar izvēli(skat.2.att.), tika ievadīts skaitlis “2”, un tad var redzēt, ka secīgi tiek sākta atbilstošu vakanču meklēšana visās lapās (skat.2.,3.att.).
 
 ![2 att](https://github.com/kostjakotovich/DatuStrukturas_webscraping/blob/main/Test_examples/Images/2.image.png)
 
@@ -12,6 +19,8 @@ Pirmajā testā
 
 3. att. Meklešanas rezultāti 2 lapa
 
+Izvēlnē izvēloties 4. pozīciju, tika parādīts viss saraksts ar atrastajām vakancēm (skat.4.,5.att.).
+
 ![4 att](https://github.com/kostjakotovich/DatuStrukturas_webscraping/blob/main/Test_examples/Images/4.image.png)
 
 4. att. Rezultatu sarakstu izvade
@@ -20,9 +29,13 @@ Pirmajā testā
 
 5. att. Rezultatu sarakstu izvade 2 lapa
 
+Tika izvēlēts skaitlis “5”, pēc tam programma sašķiroja visus piedāvājumus pēc ienākumiem (skat.6.att.).
+
 ![6 att](https://github.com/kostjakotovich/DatuStrukturas_webscraping/blob/main/Test_examples/Images/6.image.png)
 
 6. att. Sarakstu sortēšana
+
+Pēdējā attēlā redzams, kā apturēt programmas izpildi.
 
 ![7 att](https://github.com/kostjakotovich/DatuStrukturas_webscraping/blob/main/Test_examples/Images/7.image.png)
 
